--- a/css/index.css
+++ b/css/index.css
@@ -64,10 +64,19 @@ h1, h2, h3, h4, h5 {
 }
 
 .container {
-    max-width: 800px;
+    max-width: 880px;
     margin: auto;
 }
-
+@media (max-width:800px){
+    .container {
+        max-width: 800px;
+    }
+}
+@media (max-width:500px){
+    .container {
+        max-width: 500px;
+    }
+}
 
 /* Header Styles */
 
@@ -85,7 +94,11 @@ header {
 
     }
 }
-
+@media (max-width: 500px){
+    header {
+        width: 100%;
+    }
+}
 header nav {
     margin-top: 40px; 
     width: 610px;
@@ -98,7 +111,12 @@ header nav {
 
     }
 }
-
+@media (max-width: 500px){
+    header nav {
+        width: 100%;
+        flex-direction: column;
+    }
+}
 header nav a {
     text-decoration: none;
     color: #b0b0b0;
@@ -110,7 +128,19 @@ header nav a {
     }
 
 }
+@media(max-width: 500px){
+    header nav a {
+        width: 100%;
+        margin: 0 auto;
+        font-size: 10px;
+        display:flex;
+        justify-content:center;
+        border: 1px black solid;
+        padding: 20px;
 
+    }
+
+}
 header nav a:hover {
     text-decoration: underline;
     color: black;
@@ -142,6 +172,13 @@ header .logo {
         justify-content: center;
     }
 }
+@media (max-width: 500px){
+    .cta {
+        margin-left: 20px;
+        width:100%;
+        justify-content: center;
+    }
+}
 
 .cta .cta-text {
     font-size: 72px;
@@ -155,7 +192,6 @@ header .logo {
 }
 @media (max-width: 800px){
     .cta-text {
-
         margin: 0 auto;
     }
 }
@@ -167,6 +203,11 @@ header .logo {
     height: 32px;
     margin-top: 10px;
     cursor: pointer;
+}
+@media (max-width: 500px){
+    .cta-text button {
+        width: 100%;
+    }
 }
 
 .cta .cta-text button:hover {
@@ -193,7 +234,12 @@ header .logo {
     display: block;
     margin: 30px auto;
 }
-
+@media (max-width: 800px){
+    .middle-img {
+        display: flex;
+        width: 100%;
+    }
+}
 .main-content .bottom-content {
     display: flex;
 }
