--- a/css/index.css
+++ b/css/index.css
@@ -225,7 +225,11 @@ header .logo {
    font-size: 16px;
    line-height: 18px;
 }
-
+@media (max-width: 500px){
+    .text-content {
+        margin: 5px 0;
+    }
+}
 .main-content .top-content {
     display: flex;
 }
@@ -250,7 +254,9 @@ header .logo {
 }
 @media (max-width: 500px){
     .bottom-content {
+
         flex-wrap: wrap;
+
     }
 }
 .main-content .bottom-content p {
